@@ -12,10 +12,9 @@ import org.springframework.transaction.annotation.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.HashSet;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static java.util.stream.Collectors.toList;
 
@@ -34,39 +33,22 @@ public class IngredientQueryServiceImpl implements IngredientQueryService {
     @Transactional(readOnly = true)
     public List<IngredientResponseDTO.Detail> getIngredients(Long memberId, String keyword, Category category) {
 
-        List<Ingredient> ingredients;
+        String searchKeyword = (keyword != null && !keyword.isBlank()) ? keyword : null;
 
-        // 1. 키워드 + 카테고리가 있는 경우 조회
-        if (keyword != null && !keyword.isBlank() && category != null) {
-            ingredients = ingredientRepository.findByNameContainingAndCategory(keyword, category);
-        }
-        // 2. 키워드만 있는 경우
-        else if (keyword != null && !keyword.isBlank()) {
-            ingredients = ingredientRepository.findByNameContaining(keyword);
-        }
-        // 3. 카테고리만 있는 경우
-        else if (category != null) {
-            ingredients = ingredientRepository.findByCategory(category);
-        }
-        // 4. 둘 다 없는 경우 (전체 출력)
-        else {
-            ingredients = ingredientRepository.findAll();
-        }
+        List<Ingredient> ingredients = ingredientRepository.findByKeywordAndCategory(searchKeyword, category);
+
 
         // 로그인한 경우 즐겨찾기 ID 조회
-        Set<Long> favoriteIngredientIds = new HashSet<>();
-        if (memberId != null) {
-            favoriteIngredientIds = memberFavoriteRepository.findIngredientIdsByMemberId(memberId);
-        }
+        Set<Long> favoriteIngredientIds = (memberId != null)
+                ? memberFavoriteRepository.findIngredientIdsByMemberId(memberId)
+                : Collections.emptySet();
 
-        // isFavorite 포함하여 DTO 변환
-        final Set<Long> finalFavoriteIds = favoriteIngredientIds;
-        return ingredients.stream()
+         return ingredients.stream()
                 .map(ingredient -> IngredientResponseDTO.Detail.from(
                         ingredient,
-                        finalFavoriteIds.contains(ingredient.getId())
+                        favoriteIngredientIds.contains(ingredient.getId())
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
@@ -90,20 +72,15 @@ public class IngredientQueryServiceImpl implements IngredientQueryService {
     //즐겨찾기 재료 리스트 조회
     @Override
     @Transactional(readOnly = true)
-    public IngredientResponseDTO.FavoriteList getFavoriteList(Long memberId) {
+    public List<IngredientResponseDTO.Detail> getFavoriteList(Long memberId) {
 
-        Member member = memberRepository.findById(memberId)
-                .orElseThrow(() -> new BusinessException(ErrorStatus.MEMBER_NOT_FOUND));
+        List<MemberFavorite> favoriteList = memberFavoriteRepository.findAllByMemberId(memberId);
 
-        List<MemberFavorite> favoriteList = memberFavoriteRepository.findAllByMember(member);
-
-        List<IngredientResponseDTO.FavoriteDetail> detailList = favoriteList.stream()
-                .map(IngredientResponseDTO.FavoriteDetail::from)
+        return favoriteList.stream()
+                .map(favorite -> IngredientResponseDTO.Detail.from(
+                        favorite.getIngredient(),true
+                ))
                 .toList();
-
-        return new IngredientResponseDTO.FavoriteList(detailList);
-
-
     }
 
     @Override
